forgetITrob added as Author

--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
     </div>
 
     <p>Multi platform supporting organizing solution with tagging functions, aging priorities and dependencies</p><h2>Authors</h2>
-<p>forgetit-tk (i08008@hb.dhbw-stuttgart.de)<br/><br/>      </p>
+<p>forgetITrob (i08021@hb.dhbw-stuttgart.de)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>forgetit-tk (i08008@hb.dhbw-stuttgart.de)<br/>DHBW Stuttgart Campus Horb (avh@hb.dhbw-stuttgart.de)<br/>      </p>
+<p>forgetITrob (i08021@hb.dhbw-stuttgart.de)
+<br/>DHBW Stuttgart Campus Horb (avh@hb.dhbw-stuttgart.de)
+<br/>      </p>
 
 
     <h2>Download</h2>
