Refreshed the look of the project's website and added the core team member's names to it.

--- a/index.html
+++ b/index.html
@@ -1,63 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset='utf-8'>
-
-  <title>dhbw-horb/forgetit @ GitHub</title>
-
-  <style type="text/css">
-    body {
-      margin-top: 1.0em;
-      background-color: #43b6c3;
-      font-family: "Helvetica,Arial,FreeSans";
-      color: #000000;
-    }
-    #container {
-      margin: 0 auto;
-      width: 700px;
-    }
-    h1 { font-size: 3.8em; color: #bc493c; margin-bottom: 3px; }
-    h1 .small { font-size: 0.4em; }
-    h1 a { text-decoration: none }
-    h2 { font-size: 1.5em; color: #bc493c; }
-    h3 { text-align: center; color: #bc493c; }
-    a { color: #bc493c; }
-    .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { float: right; }
-    pre { background: #000; color: #fff; padding: 15px;}
-    hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
-    .footer { text-align:center; padding-top:30px; font-style: italic; }
-  </style>
+	<meta charset='utf-8'>
+	<title>dhbw-horb/forgetit @ GitHub</title>
+	<style type="text/css">
+		body {
+			margin-top: 1.0em;
+			background-color: #e8e8e8;
+			font-family: sans-serif;*/
+			color: #000000;
+		}
+		#container {
+			margin: 0 auto;
+			width: 700px;
+		}
+		h1 { font-size: 3.8em; color: #3b3b3b; margin-bottom: 3px; text-shadow: #c0c0c0 3px 3px 5px;}
+		h1 .small { font-size: 0.4em; }
+		h1 a { text-decoration: none; }
+		h2 { font-size: 1.5em; color: #3b3b3b; }
+		h3 { text-align: center; color: #3b3b3b; }
+		a:link { color: #008abd; }
+		a:visited { color: #008abd; }
+		a:hover {color: #000000;}
+		.description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
+		.download { float: right; }
+		pre { background: #505050; color: #fff; padding: 15px; box-shadow: #c0c0c0 6px 6px 8px;}
+		hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
+		.footer { text-align:center; padding-top:30px; font-style: italic; }
+	</style>
 </head>
 
 <body>
-  <a href="http://github.com/dhbw-horb/forgetit"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+	<a href="http://github.com/dhbw-horb/forgetit"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
-  <div id="container">
+	<div id="container">
+	<div class="download">
+		<a href="http://github.com/dhbw-horb/forgetit/zipball/master">
+		<img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
+		<a href="http://github.com/dhbw-horb/forgetit/tarball/master">
+		<img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
+	</div>
+	<h1><a href="http://github.com/dhbw-horb/forgetit">forgetIT</a>
+	<span class="small">by <a href="http://github.com/dhbw-horb">dhbw-horb</a></span></h1>
+	<div class="description">
+		A multi platform organizing solution with tagging functions, aging priorities and dependencies.
+	</div>
 
-    <div class="download">
-      <a href="http://github.com/dhbw-horb/forgetit/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/dhbw-horb/forgetit/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/dhbw-horb/forgetit">forgetIT</a>
-      <span class="small">by <a href="http://github.com/dhbw-horb">dhbw-horb</a></span></h1>
-
-    <div class="description">
-      Multi platform supporting organizing solution with tagging functions, aging priorities and dependencies
-    </div>
-
-    <p>Multi platform supporting organizing solution with tagging functions, aging priorities and dependencies</p><h2>Authors</h2>
-<p>forgetITrob (i08021@hb.dhbw-stuttgart.de)
-<br/>
-<br/>      </p>
-<h2>Contact</h2>
-<p>forgetITrob (i08021@hb.dhbw-stuttgart.de)
-<br/>DHBW Stuttgart Campus Horb (avh@hb.dhbw-stuttgart.de)
-<br/>      </p>
-
+	<h2>Core Team</h2>
+	<ul>
+		<li>forgetITrob (i08021@hb.dhbw-stuttgart.de)</li>
+		<li>LennyLeonard (i08022@hb.dhbw-stuttgart.de)</li>
+		<li>David-Henn (i08007@hb.dhbw-stuttgart.de)</li>
+		<li>ChornHulio (i08004@hb.dhbw-stuttgart.de)</li>
+		<li>forgetit-tk (i08008@hb.dhbw-stuttgart.de)</li>
+		<li>forgetit-BA (i08001@hb.dhbw-stuttgart.de)</li>
+		<li>optimusprime42 (i08003@hb.dhbw-stuttgart.de)</li>
+	</ul>
+	<h2>Contact</h2>
+	<p>forgetITrob (i08021@hb.dhbw-stuttgart.de)
+	<br/>DHBW Stuttgart Campus Horb (avh@hb.dhbw-stuttgart.de)
+	<br/>      </p>
 
     <h2>Download</h2>
     <p>
@@ -71,7 +73,7 @@
     </p>
 
     <div class="footer">
-      get the source code on GitHub : <a href="http://github.com/dhbw-horb/forgetit">dhbw-horb/forgetit</a>
+      Get the source code on GitHub : <a href="http://github.com/dhbw-horb/forgetit">dhbw-horb/forgetit</a>
     </div>
 
   </div>
